--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,19 +1,23 @@
 Package: GiniDecompLY
-Title: Gini decomposition by income sources based on the Lerman and Yitzhaki approach(1985)
-Version: 0.0.0.9000
-Authors@R: 
-    person(given = "Abdessamad",
-           family = "Ait Mbarek",
-           role = c("aut", "cre"),
-           email = "abdessamad.ambarek@gmail.com",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: The package provides a set of functions that quantify the effect of each income source on inequalities. The decomposition is based on the approach of Lerman and Yitzhaki (1985). 
-License: CC0
+Title: Gini Decomposition by Income Sources
+Version: 1.0.0
+Author: Abdessamad Ait Mbarek 
+Maintainer: Abdessamad Ait Mbarek <abdessamad.ambarek@gmail.com>
+Description: Estimation of the effect of each income source on income inequalities based on the decomposition of Lerman and Yitzhaki (1985) <doi:10.2307/1928447>. 
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.1
+RoxygenNote: 7.2.3
 Imports: 
     dplyr,
-    tibble,
-    magrittr
+    tidyr,
+    magrittr,
+Suggests: 
+    knitr,
+    rmarkdown,
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
+VignetteBuilder: knitr
+Depends: 
+    R (>= 2.10)
