--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: GiniDecompLY
 Title: Gini Decomposition by Income Sources
-Version: 1.0.0
+Version: 1.0.1
 Authors@R: c(person(given = "Abdessamad",
                     family = "Ait Mbarek",
                     role = c("aut", "cre"),
@@ -20,6 +20,7 @@ Imports:
 Suggests: 
     knitr,
     rmarkdown,
+    dineq,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 VignetteBuilder: knitr
